GBICSGO-2277: adds trashcan button to backup dialog (#416)
* GBICSGO-2277: adds trashcan button to backup dialog

* GBICSGO-2277: fixes missing method for stub

* GBICSGO-2277: fmts pkg/http/rest/api_test.go

* GBICSGO-2277: fixes description for /trashcans/{backupId}/clean_up API

* GBICSGO-2277: adds confirm dialog

* GBICSGO-2277: makes trashcan deletion async

* GBICSGO-2277: implements missing method for repository mock

* GBICSGO-2277: fixes test TestCleanupTrashcansService_Noop

* GBICSGO-2277: fixes MarkTrashcanCleanupStatusWithError and updates err msg

* GBICSGO-2277: adds timestamp for schedule trashcan cleanup

* GBICSGO-2277: fixes column name for trashcan_cleanup_last_scheduled_timestamp

* GBICSGO-2277: fixes test for TrashcanCleanup

* GBICSGO-2277: fix timestamp type for trashcan_cleanup_last_scheduled_timestamp

* GBICSGO-2277: adds status for cleanup trashcan is in progress

* GBICSGO-2277: adds guard for empty prefix for trashcan cleanup

* GBICSGO-2277: fixes sql migration

* GBICSGO-2277: adds link to cloud storage bucket

* GBICSGO-2277: fmts func declaration

* GBICSGO-2277: fixes inner text for sink bucket a-tag

* GBICSGO-2277: opens bucket sink in new tab
